@@ -237,7 +237,7 @@
                     <version>${vaadin.version}</version>
                     <configuration>
                         <webappDirectory>${project.build.directory}/testwebapp/VAADIN/widgetsets</webappDirectory>
-                        <extraJvmArgs>-Xmx1024M -Xss512m -XX:MaxPermSize=1024m</extraJvmArgs>
+                        <extraJvmArgs>-Xmx2g -Xss512m</extraJvmArgs>
                         <hostedWebapp>${project.build.directory}/testwebapp</hostedWebapp>
                         <noServer>true</noServer>
                         <runTarget>http://localhost:9998/</runTarget>
@@ -295,7 +295,7 @@
         <dependency>
             <groupId>org.peimari</groupId>
             <artifactId>g-leaflet</artifactId>
-            <version>1.0.14-SNAPSHOT</version>
+            <version>1.0.15</version>
             <!-- Only needed during widgetset compilation, so provided scope would 
             be great for this, but with it is left out from widgetset compilation by 
             vaadin plugin -->
@@ -322,7 +322,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.8.3</version>
+            <version>2.9.8</version>
         </dependency>
 
         <dependency>
